Bug 1127773 - Use the entire scrollable overflow rect so that scrolledframes build event regions more correctly. r=tn

(Patch dictated by roc)